--- a/requirements.txt
+++ b/requirements.txt
@@ -1,521 +1,140 @@
-absl-py==1.3.0
 adafruit-ampy==1.1.0
-aiofiles==22.1.0
-aiohttp==3.8.4
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-aiosqlite==0.18.0
-ajsonrpc==1.2.0
-alembic==1.9.1
-altair==4.2.2
 ansible==7.2.0
-ansible-core==2.14.2
-anyio==3.6.2
 apturl==0.5.2
-argcomplete==2.0.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
 asciinema==2.2.0
-asttokens==2.2.1
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==4.0.2
-asyncio==3.4.3
-attrs==23.1.0
-Authlib==1.1.0
-autoflake==2.2.0
 autopep8==2.0.1
-azure-common==1.1.28
-azure-core==1.26.1
-azure-identity==1.9.0
-azure-mgmt-core==1.3.2
-azure-mgmt-rdbms==10.1.0
-azure-mgmt-resource==21.0.0
-azure-mgmt-subscription==3.0.0
-Babel==2.11.0
-backcall==0.2.0
 backoff==2.2.1
-bcrypt==3.2.0
-beautifulsoup4==4.11.1
 bernhard==0.2.6
 bibtexparser==1.4.0
-bidict==0.22.0
-bitstring==4.0.2
-black==22.12.0
-bleach==6.0.0
-bleak==0.20.2
-bleak-sigspec==0.0.4
-blinker==1.4
-boltons==23.0.0
-boto3==1.20.54
-botocore==1.23.54
-bottle==0.12.23
 bpytop==1.0.68
-breadability==0.1.20
-Brlapi==0.8.3
-Brotli==1.0.9
-cachetools==5.3.1
-cachier==2.0.0
+brlapi==0.8.3
 cassandra-driver==3.25.0
-certifi==2022.12.7
-cffi==1.15.1
-cfgv==3.3.1
-chardet==4.0.0
-charset-normalizer==2.0.6
 chevron==0.14.0
 chrome-gnome-shell==0.0.0
-ci-info==0.3.0
-click==8.1.3
-click-didyoumean==0.3.0
-CoAPthon==4.0.2
-colorama==0.4.4
-comm==0.1.2
+coapthon==4.0.2
 command-not-found==0.3
-commentjson==0.9.0
-configobj==5.0.8
-configparser==5.3.0
 confluent-kafka==2.0.2
-contourpy==1.0.7
-CouchDB==1.2
-cryptography==3.4.8
+couchdb==1.2
 cupshelpers==1.0
 curlify==2.2.1
-cycler==0.11.0
-dataclasses-json==0.5.7
-dbus-fast==1.90.1
 dbus-python==1.2.18
-debugpy==1.6.6
-decorator==5.1.1
 defer==1.0.6
-defusedxml==0.7.1
-Deprecated==1.2.14
-dill==0.3.7
-distlib==0.3.6
 distro==1.7.0
 distro-info==1.1+ubuntu0.1
-dnspython==2.2.1
 docker==5.0.3
 dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.19
 docwriter==1.3.2
-dpath==1.5.0
 duplicity==0.8.21
 easyeda2kicad==0.6.2
-ecdsa==0.18.0
-elastic-transport==8.4.0
 elasticsearch==8.5.3
-email-validator==1.3.0
-entrypoints==0.4
 esptool==4.6.2
-etelemetry==0.3.0
-euclid3==0.1
-eventlet==0.33.0
-exceptiongroup==1.1.2
-executing==1.2.0
 faiss-cpu==1.7.4
-fastapi==0.95.1
 fasteners==0.14.1
-fastjsonschema==2.16.3
-ffmpy==0.3.0
-filelock==3.6.0
-FITX==1.0.1
+fitx==1.0.1
 fitz==0.0.1.dev2
 flake8==6.0.0
-Flask==2.1.3
-Flask-Babel==2.0.0
-Flask-Compress==1.13
-Flask-Gravatar==0.5.0
-Flask-Login==0.6.2
-Flask-Mail==0.9.1
-Flask-Migrate==3.1.0
-Flask-Paranoid==0.3.0
-Flask-Principal==0.4.0
-Flask-Security-Too==4.1.5
-Flask-SocketIO==5.2.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.0.1
-flatbuffers==23.1.4
-fonttools==4.38.0
 fqdn==1.5.1
 frontend==0.0.3
-frozenlist==1.3.3
-fsspec==2023.4.0
-future==0.18.2
-gast==0.4.0
-geomet==0.2.1.post1
-ghp-import==2.1.0
-gitdb==4.0.10
-GitPython==3.1.31
-Glances==3.3.0.4
-google-auth==2.15.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
+glances==3.3.0.4
 gpg==1.16.0
 gradio==3.28.0
-gradio_client==0.1.4
 graphitesender==0.11.2
-graphql-core==3.2.3
-greenlet==2.0.1
-grpcio==1.51.1
-h11==0.14.0
 h2==4.1.0
-h5py==3.7.0
-hpack==4.0.0
-httpagentparser==1.9.5
-httpcore==0.16.3
 httpie==2.6.0
-httplib2==0.20.2
-httpx==0.23.3
-huggingface-hub==0.14.1
-hyperframe==6.0.1
-hypothesis==6.82.0
 hypothesis-graphql==0.10.0
 hypothesis-jsonschema==0.22.1
-identify==2.5.23
-idna==3.3
-ifaddr==0.2.0
-importlib-metadata==4.6.4
 influxdb==5.3.1
 influxdb-client==1.35.0
-iniconfig==2.0.0
-ipykernel==6.21.2
-ipython==8.8.0
-ipython-genutils==0.2.0
-isodate==0.6.1
 isoduration==20.11.0
 isort==5.12.0
-itsdangerous==2.1.2
-jedi==0.18.2
 jeepney==0.7.1
-Jinja2==3.1.2
-jmespath==0.10.0
-joblib==1.2.0
-json5==0.9.11
 jsonpointer==2.3
-jsonschema==3.2.0
 jsonschema-specifications==2023.7.1
 junit-xml==1.9
-jupyter-events==0.6.3
-jupyter-server==1.23.6
-jupyter-ydoc==0.2.2
-jupyter_client==7.4.1
-jupyter_core==5.2.0
-jupyter_server_fileid==0.8.0
-jupyter_server_terminals==0.4.4
-jupyter_server_ydoc==0.6.1
+jupyter-server-terminals==0.4.4
 jupyterlab==3.6.1
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.19.0
 kafka-python==2.0.2
 kaggle==1.5.12
-keras==2.11.0
-keyring==23.5.0
-KiKit @ git+https://github.com/yaqwsx/KiKit@072bb845645452a5027cb27072d43ded3da18fa0
-kiwisolver==1.4.4
+kikit==1.3.0+18.g072bb84
 langchain==0.0.152
 language-selector==0.1
-lark-parser==0.7.8
 launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-ldap3==2.9.1
-libclang==14.0.6
-libcst==0.4.9
 libvirt-python==8.0.0
 linkify-it-py==2.0.0
 lockfile==0.12.2
-loguru==0.6.0
-looseversion==1.1.2
 louis==3.20.0
-lxml==4.9.2
 macaroonbakery==1.3.1
-mailbits==0.2.1
-Mako==1.1.3
-Markdown==3.3.6
-markdown-it-py==2.2.0
-markdown2==2.4.6
 markdownify==0.11.6
-MarkupSafe==2.1.2
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib==3.7.0
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mdit-py-plugins==0.3.3
-mdurl==0.1.2
-mergedeep==1.3.4
 micropy-cli==4.2.1
-micropython-stubber==1.13.7
-mistune==2.0.5
-mkdocs==1.5.2
-mkdocs-material==7.1.9
-mkdocs-material-extensions==1.1.1
 monotonic==1.6
 more-itertools==8.10.0
-mpmath==1.2.1
-msal==1.20.0
-msal-extensions==0.3.1
-msrest==0.7.1
-multidict==6.0.4
-mypy==1.2.0
-mypy-extensions==1.0.0
-nbclassic==0.5.2
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
-netifaces==0.11.0
-networkx==3.1
-nibabel==5.1.0
-nipype==1.8.6
-nltk==3.8.1
-nodeenv==1.7.0
-notebook==6.5.2
-notebook_shim==0.2.2
-numexpr==2.8.4
-numpy==1.21.5
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-oauthlib==3.2.0
 olefile==0.46
 openai==0.27.2
-openapi-schema-pydantic==1.2.4
-opt-einsum==3.3.0
-orjson==3.8.11
-outcome==1.2.0
-packaging==21.3
 paho-mqtt==1.6.1
-pandas==2.0.1
-pandocfilters==1.5.0
-paramiko==2.9.3
-parso==0.8.3
-passlib==1.7.4
-pathlib==1.0.1
-pathspec==0.11.2
-pathtools==0.1.2
-pbkdf2==1.3
-pcbnewTransition==0.3.4
-pexpect==4.8.0
 pgadmin4==6.18
-pickleshare==0.7.5
 pika==1.3.1
-Pillow==9.0.1
-pipx==1.2.0
-pkginfo==1.9.6
-platformdirs==2.6.2
+pip-chill==1.0.3
+pip-tools==7.3.0
+pipreqs==0.4.13
 platformio==6.1.9
-pluggy==1.2.0
-ply==3.11
-portalocker==2.6.0
 potsdb==1.0.3
 pre-commit==3.2.2
-prettytable==0.7.2
-prometheus-client==0.15.0
-prompt-toolkit==3.0.36
-protobuf==4.22.3
-prov==2.0.0
-psutil==5.9.3
-psycopg2-binary==2.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
 py3nvml==0.2.7
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pybars3==0.9.7
-pycairo==1.20.1
-pycodestyle==2.10.0
-pycountry==22.3.5
-pycparser==2.21
-pycryptodomex==3.16.0
 pycups==2.0.1
-pydantic==1.10.7
-pydot==1.4.2
-pydub==0.25.1
-pyelftools==0.29
-pyflakes==3.0.1
 pygal==3.0.0
-PyGithub==1.59.1
-Pygments==2.14.0
-PyGObject==3.42.1
-PyJWT==2.8.0
+pygobject==3.42.1
 pymacaroons==0.13.0
-pymdown-extensions==9.9.2
 pymdstat==0.4.2
-PyMeta3==0.5.1
-PyNaCl==1.5.0
-pyotp==2.8.0
-pyparsing==2.4.7
-PyPDF2==3.0.1
-pypi-simple==1.1.0
-pypng==0.0.19
-PyQt5==5.15.6
-PyQt5-sip==12.9.1
+pypdf2==3.0.1
+pyqt5==5.15.6
 pyrate-limiter==2.10.0
-pyRFC3339==1.1
-pyright==1.1.320
-pyrsistent==0.18.1
-pyserial==3.5
-pysmi==0.3.4
+pyrfc3339==1.1
 pysnmp==4.4.12
-PySocks==1.7.1
-pysondb-v2==2.1.0
-pyte==0.8.1
-pytest==7.4.0
+pysocks==1.7.1
 pytest-subtests==0.7.0
 python-apt==2.4.0+ubuntu2
-python-dateutil==2.8.2
 python-debian==0.1.43+ubuntu1.1
-python-dotenv==0.21.1
-python-engineio==4.3.4
-python-json-logger==2.0.7
-python-minifier==2.9.0
-python-multipart==0.0.6
-python-nmap==0.7.1
-python-slugify==8.0.1
-python-socketio==5.7.2
 python-telegram-bot==20.1
-pytils==0.4.1
-pytz==2021.3
-pyudev==0.24.1
 pyxdg==0.27
-pyxnat==1.5
-PyYAML==5.4.1
-pyyaml_env_tag==0.1
-pyzmq==24.0.1
-qrcode==7.3.1
-questionary==1.10.0
-rdflib==6.3.2
-reactivex==4.0.4
-readme-renderer==37.3
-reedsolo==1.7.0
-referencing==0.30.2
-regex==2022.10.31
 reportlab==3.6.8
-requests==2.30.0
-requests-oauthlib==1.3.1
-requests-toolbelt==0.9.1
-requirements-parser==0.2.0
-resolvelib==0.8.1
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rich==13.3.2
-rpds-py==0.9.2
-rsa==4.9
-rshell==0.0.31
 ruff==0.0.256
-s3transfer==0.5.2
-safetensors==0.3.1
 scandir==1.10.0
 scikit-learn==1.2.2
-scipy==1.10.0
-SecretStorage==3.3.1
-semantic-version==2.10.0
-Send2Trash==1.8.0
-shapely==2.0.0
-shellingham==1.5.0.post1
-simplejson==3.18.0
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-solidpython==1.1.3
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-speaklater3==1.4
-SQLAlchemy==1.4.45
-sqlparse==0.4.3
-sshtunnel==0.4.0
-stack-data==0.6.2
-starlette==0.28.0
+secretstorage==3.3.1
 starlette-testclient==0.2.0
 statsd==4.0.1
 sumy==0.11.0
 svg2mod==0.1.0
 sympy==1.11.1
 systemd-python==234
-tabulate==0.9.0
-tenacity==8.2.2
-tensorboard==2.11.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
 tensorflow==2.11.0
-tensorflow-estimator==2.11.0
 tensorflow-hub==0.13.0
-tensorflow-io-gcs-filesystem==0.29.0
-termcolor==2.2.0
-terminado==0.17.1
-text-unidecode==1.3
 texttable==1.6.4
 thefuck==3.32
-threadpoolctl==3.1.0
 tiktoken==0.3.3
-tinycss2==1.2.1
-tokenizers==0.13.3
-tomli==2.0.1
-tomli_w==1.0.0
 tools==0.1.9
-toolz==0.12.0
 torch==1.13.1
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.8.1
-traits==6.3.2
 transformers==4.31.0
-trio==0.22.1
-trio-websocket==0.9.2
 tweepy==4.13.0
 twilio==8.0.0
 twine==4.0.2
-typed-config==1.3.2
-typer==0.9.0
-typing-inspect==0.8.0
-typing_extensions==4.5.0
-tzdata==2023.3
-ua-parser==0.16.1
 ubuntu-advantage-tools==8001
 ubuntu-drivers-common==0.0.0
-uc-micro-py==1.0.1
 ufw==0.36.1
 unattended-upgrades==0.1
-Unidecode==1.3.6
-unsync==1.4.0
-upydevice==0.3.8
+unidecode==1.3.6
 uri-template==1.2.0
-urllib3==1.26.5
 usb-creator==0.3.7
-user-agents==2.2.0
-userpath==1.9.0
-uvicorn==0.22.0
 vboxapi==1.0
-virtualenv==20.13.0+ds
 voila==0.4.0
 wadllib==1.3.6
 wakatime==14.0.1
-watchdog==2.2.1
-wcwidth==0.2.5
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==0.59.0
-websockets==10.4
 websockets-cli==0.2.1
-Werkzeug==2.1.2
 wifi==0.3.8
-WoeUSB-ng==0.2.12
-wrapt==1.14.1
-wsproto==1.2.0
-WTForms==3.0.1
-wxPython==4.2.0
+woeusb-ng==0.2.12
 wxwidgets==1.0.5
 xdg==5
 xgboost==1.7.2
 xkit==0.0.0
-xmltodict==0.13.0
-y-py==0.5.9
-yarl==1.8.2
-ypy-websocket==0.8.2
 zeroconf==0.47.1
 zipp==1.0.0
