chore: finish desktop&laptop setup
Signed-off-by: Rodney Osodo <socials@rodneyosodo.com>

--- a/ansible/Makefile
+++ b/ansible/Makefile
@@ -7,8 +7,8 @@ prep:
 	ansible-galaxy collection install community.general
 	ansible-galaxy collection install kewlfft.aur
 
-.PHONY: install-desktop
-install-desktop: prep
+.PHONY: setup-desktop
+setup-desktop: prep
 	ansible-playbook playbooks/environment.yaml --connection=local --ask-become-pass
 	ansible-playbook playbooks/yay.yaml --connection=local --ask-become-pass
 	ansible-playbook playbooks/pacman.yaml --connection=local --ask-become-pass
@@ -16,5 +16,11 @@ install-desktop: prep
 	ansible-playbook playbooks/amd.yaml --connection=local --ask-become-pass
 	ansible-playbook playbooks/audio.yaml --connection=local --ask-become-pass
 	ansible-playbook playbooks/docker.yaml --connection=local --ask-become-pass
+	ansible-playbook playbooks/go.yaml --connection=local
+	ansible-playbook playbooks/rust.yaml --connection=local
+
+.PHONY: install-desktop
+install-desktop: prep
+	ansible-playbook playbooks/packages/desktop.yaml --connection=local --ask-become-pass
 	ansible-playbook playbooks/go.yaml --connection=local
 	ansible-playbook playbooks/rust.yaml --connection=local
