--- a/ansible/playbooks/docker.yaml
+++ b/ansible/playbooks/docker.yaml
@@ -29,3 +29,10 @@
         name: libvirtd
         state: restarted
         daemon_reload: true
+
+    - name: Start tailscaled
+      ansible.builtin.systemd_service:
+        name: tailscaled
+        state: started
+        enabled: true
+        daemon_reload: true
