feat(nvim): add configs
Signed-off-by: Rodney Osodo <socials@rodneyosodo.com>

--- a/ansible/Makefile
+++ b/ansible/Makefile
@@ -23,3 +23,14 @@ install-desktop: prep
 	ansible-playbook playbooks/packages/desktop.yaml --connection=local --ask-become-pass
 	ansible-playbook playbooks/go.yaml --connection=local
 	ansible-playbook playbooks/rust.yaml --connection=local
+
+.PHONY: help
+help:
+	@echo "This Makefile is used to install dotfiles"
+	@echo ""
+	@echo "Usage:"
+	@echo "  make ping            - ping the server"
+	@echo "  make prep            - install ansible collections"
+	@echo "  make setup-desktop   - install desktop packages(runs prep)"
+	@echo "  make install-desktop - install desktop packages(runs prep)"
+	@echo "  make help            - show this help message"
