fix(hyprland): remove hyprpaper and use swww

--- a/config/.config/hypr/hyprland.conf
+++ b/config/.config/hypr/hyprland.conf
@@ -47,7 +47,10 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & hyprpaper & slack
+# exec-once = bash ~/.config/waybar/scripts/start.sh # For debug purposes
+exec-once = waybar
+exec-once = slack
+exec-once = swww-daemon
 
 #############################
 ### ENVIRONMENT VARIABLES ###
