--- a/ansible/playbooks/go.yaml
+++ b/ansible/playbooks/go.yaml
@@ -23,3 +23,4 @@
         go install go.uber.org/nilaway/cmd/nilaway@latest
         go install github.com/oligot/go-mod-upgrade@latest
         go install github.com/vektra/mockery/v2@latest
+        go install mvdan.cc/sh/v3/cmd/shfmt@latest
