feat(git): add cleanup for removing merged branches

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -47,3 +47,11 @@
 # Detect whitespace errors when applying a patch.
 [apply]
 	whitespace = fix
+
+# Cleanup branches
+[alias]
+    # Clean up local merged branches (excluding master, develop, dev, and release* branches)
+    cleanup-local = "!git branch --merged | grep -v '\\*\\|master\\|main\\|develop\\|dev\\|release' | xargs -n 1 -r git branch -d"
+
+    # Clean up remote merged branches (excluding master, develop, dev, and release* branches)
+    cleanup-remote = "!git fetch -p && git branch -r --merged | grep -v '\\*\\|master\\|main\\|develop\\|dev\\|release' | sed 's/origin\\///' | xargs -n 1 -r git push origin --delete"
