feat: Add wallpaper setup to Hyprland startup

--- a/config/.config/hypr/hyprland.conf
+++ b/config/.config/hypr/hyprland.conf
@@ -51,6 +51,7 @@ $menu = wofi --show drun
 exec-once = waybar
 exec-once = slack
 exec-once = swww-daemon
+exec-once = swww img ~/.config/wallpaper/wallpaper.jpg
 
 #############################
 ### ENVIRONMENT VARIABLES ###
