fix(git): bitbucket config

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -55,3 +55,6 @@
 
     # Clean up remote merged branches (excluding master, develop, dev, and release* branches)
     cleanup-remote = "!git fetch -p && git branch -r --merged | grep -v '\\*\\|master\\|main\\|develop\\|dev\\|release' | sed 's/origin\\///' | xargs -n 1 -r git push origin --delete"
+
+[url "git@bitbucket.org:"]
+    insteadOf = https://bitbucket.org/
