--- a/config/.config/hypr/hyprland.conf
+++ b/config/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1.0
-
+# monitor=HDMI-A-1,highres,auto,1.0
 
 ###################
 ### MY PROGRAMS ###
