chore: updated version of packages

--- a/config/.config/zed/settings.json
+++ b/config/.config/zed/settings.json
@@ -54,9 +54,8 @@
   "agent": {
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-3-5-sonnet-latest"
+      "model": "claude-sonnet-4"
     },
-    "version": "2"
   },
   "theme": "Gruvbox Dark Hard",
   "telemetry": {
