--- a/config/.config/hypr/hyprland.conf
+++ b/config/.config/hypr/hyprland.conf
@@ -52,6 +52,7 @@ exec-once = waybar
 exec-once = slack
 exec-once = swww-daemon
 exec-once = swww img ~/.config/wallpaper/wallpaper.jpg
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 #############################
 ### ENVIRONMENT VARIABLES ###
