--- a/config/.config/hypr/hyprland.conf
+++ b/config/.config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ monitor=,preferred,auto,1.0
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = ghostty
 $fileManager = nautilus
 $menu = wofi --show drun
 
